neighborhoods and bars

--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -17,7 +17,7 @@
 			<option value=<%=neighborhood.id%>> <%=neighborhood.name%></option>
 			<% end %>
 		</select>
-		<button>Get Happy </button>
+		<div class="btn btn-primary" id= "findBar">Find Me Bar</div>
 			
 
 	</div>
